--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
   <header>
-    <h1 id = "title">Zombify</h1>
+    <div id = "title"></div>
     <% if @user %>
         <span><%="Your Points: "%></span><span id = "your_points"><%=@user.points%></span>
         <span id = "opponents_remaining">
