--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,15 +37,9 @@ html p {
     border: 2px solid black;
  }
 
-/* #title {
-  background-image: url("logo.jpg");
-  height: 50%;
-  margin-left: 25%;
-  background-repeat: no-repeat;
-  max-width: 50%;
-  padding: 25%;
-  background-size: 53%;
-}*/
+ #title {
+  margin-top: 9%;
+}
 
  html h1, html h2, html h3, html h4 {
   font-family: 'Rock Salt', cursive; 
@@ -234,6 +228,9 @@ HOMEPAGE*/
 }
 
 #handle {
+  height: 50%;
+  margin-top: 18%;
+  font-size: 21px;
   color: white;
 }
 
