--- a/app/views/games/_end_game.html.erb
+++ b/app/views/games/_end_game.html.erb
@@ -1,7 +1,9 @@
 <div id="game-over" >
   <h1>GAME OVER</h1>
-  <br>
+  <p>Please join us again every day at 6pm. Signups begin at 8am daily.</p>
+<!-- if @game_finished  -->
   <div id= "stats">
     <%= render partial: "statistics/stats" %>
   </div>
+
 </div>
