--- a/app/views/games/_pending.html.erb
+++ b/app/views/games/_pending.html.erb
@@ -1,2 +1,5 @@
-<h1>ZOMBIIEESSSS</h1>
-<h3>The game hasn't started yet. Go away for now, but be sure to come back! </h3>
+<div id="pending_game">
+  <h1>ZOMBIIEESSSS</h1>
+  <h3>The game hasn't started yet. Go away for now, but be sure to come back! </h3>
+</div>
+
