--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -1,5 +1,5 @@
 
-<div class = "five columns offset-by-three"id = 'login'>
+<div id = 'login'>
 	<h1>login!</h1>
 
 	<%= form_tag sessions_path do %>
