--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -1,4 +1,4 @@
-<div class = "five columns offset-by-three"id = 'signup'>
+<div id = 'signup'>
 <h1>signup</h1>
 
 <%= form_for @user, :html => { :id => "sign_up" } do |f| %>
