--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,9 +45,9 @@
 <div id="menu_box" class="white_content">
     <ul>
       <li><h2 id = 'handle'>Code: <%= @user.handle%></h2></li>
-      <li><button id="confront" onclick = "document.getElementById('battle_box').style.display='block';document.getElementById('fade').style.display='block'"
+      <li><button id="confront_mobile" onclick = "document.getElementById('battle_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; " class = ".inner">Bite!</button></li>
-      <li><button id="checkin" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
+      <li><button id="checkin_mobile" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; "class = ".inner"><a href="#">Harvest</a></button></li>
       <li><button id="rules" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; " class = ".inner">View Rules</button></li>
