--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,11 +77,17 @@ html p {
   overflow:visible;
  }
 
- html button, #tempt-fate {
+ html button, #tempt-fate, #hide_me {
   background: radial-gradient(yellow, orange,#8F2400, #260000, black);
   border-radius: 5px;
-  /*border: 2px solid #273519;*/
+  border: 2px solid black;
   color: black;
+  font-family: 'Rock Salt', cursive;
+}
+
+#hide_me {
+  width: 50%;
+  margin-left: 25%;
 }
 
 html button:hover {
@@ -91,8 +97,8 @@ html button:hover {
 html ul {
   /*margin-right: 25%*/
   margin: 0 auto;
-  width: 50%;
-  margin-left: 25%
+  width: 80%;
+  margin-left: 10%
 }
 
 html li {
@@ -250,7 +256,7 @@ html .user_stats span{
 #handle {
   height: 50%;
   margin-top: 18%;
-  font-size: 14px;
+  font-size: 22px;
   color: white;
   font-family: 'Rock Salt', cursive;
 }
@@ -294,7 +300,7 @@ html .user_stats span{
   #handle {
     text-align: center;
     margin-bottom: 5%;
-    font-size: 15px;
+    font-size: 30px;
   }
 }
 
