Adds message about only harvesting once

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -123,10 +123,12 @@
 
 <!-- Checkins-->
 <div id="checkin_box" class="white_content">
-    You look everywhere - you're desperate to find that cure ingredient....
+    Thanks for doing your part! Only one harvest per user will count, as you can only carry so much.
     <br>
     <br>
     <button id = "hide_me" href = "javascript:void(0)" onclick = "document.getElementById('checkin_box').style.display='none';
-    document.getElementById('fade').style.display='none'">Is it here?</button>
+    document.getElementById('fade').style.display='none'">Ok</button>
+    <br>
+
     </div>
 <div id="fade" class="black_overlay"></div>
