--- a/app/views/users/_login.html.erb
+++ b/app/views/users/_login.html.erb
@@ -7,6 +7,6 @@
 	  <%= email_field_tag :email %>
 	  <%= label_tag :password %>
 	  <%= password_field_tag :password%>
-	  <%= submit_tag("Log In") %><span class = "back_link" ><a href="/">     return to home</a></span>
+	  <%= submit_tag("Log In") %><span class = "back_link" ><a href="/">     back</a></span>
 	<% end %>
 </div>
