fixes mobile harvesting bug

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
   <div id="feed" data-user-infected = <%=@user.infected%>
                  data-user-id = <%= @user.id %>
 
@@ -49,7 +48,7 @@
       <li><h2 id = 'handle'>Code: <%= @user.handle%></h2></li>
       <li><button id="confront_mobile" onclick = "document.getElementById('battle_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; " class = ".inner">Bite!</button></li>
-      <li><button id="checkin_mobile" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
+      <li><button id="checkin_mobile" onclick = "document.getElementById('checkin_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; "class = ".inner"><a href="#">Harvest</a></button></li>
       <li><button id="rules" onclick = "document.getElementById('rules_box').style.display='block';document.getElementById('fade').style.display='block'"
       style = "font-family: 'Rock Salt', cursive; " class = ".inner">View Rules</button></li>
